tests/agl/programs/errors/runtime_failures.agl
# Built-in runtime exceptions caught in-language: ArithmeticError, MatchError,
# MaxIterationsExceeded; `catch Exception as e` and binderless wildcard.
enum Coin
  | Heads
  | Tails

param d: int
param mode

agent tosser

try
  let q = 10 / d
  print q
catch ArithmeticError as e =>
  print "math failed: ${e.operation}"

try
  let flip: Coin = ask("Flip a coin.", agent: tosser)
  case flip of
    | Heads() => print "heads"
catch MatchError as e =>
  print "no match for ${e.scrutinee_type}"

try
  var i: int = 0
  do[2]
    i := i + 1
  until mode = "converge"
  print "loop done ${i}"
catch MaxIterationsExceeded as e =>
  print "exhausted at ${e.limit}"

try
  if mode = "boom" =>
    raise Abort(message: "boom")
  else =>
    ()
catch Exception as e =>
  print "generic: ${e.message}"

try
  if mode = "boom" =>
    raise Abort(message: "again")
  else =>
    ()
catch _ =>
  print "anon"

print "end"
